# BudgetBuddy

./: CMakeLists.txt
include/: account.h  transaction.h
src/: account.cpp  main.cpp
test/: accounttest.cpp
